# Aria---GitHub-Research

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  aria.bat  run_aria.bat  run_ui.bat
.github/scripts/: capture_screenshots.py
.github/workflows/: ci.yml
aria/: .env.example  .gitignore  README.md  aria.bat  config.py  conftest.py  install_deps.bat  main.py  orchestrator.py  provider_pool.py  pyproject.toml  requirements.txt  run_aria.bat  run_ui.bat  seed_aria_self_run.py  state.py  test_all_apis.py  test_decomposer.py  test_decomposer_aria.py  test_github_scorer.py  test_knowledge_packager.py  test_pattern_extractor.py  test_quality_judge.py  test_synthesizer.py  test_web_researcher.py
aria/UI/: app.jsx  data.js  index.html  screens.jsx  styles.css  swarm.jsx
aria/agents/: __init__.py  decomposer.py  github_researcher.py  intake.py  knowledge_packager.py  pattern_extractor.py  quality_judge.py  synthesizer.py  web_researcher.py
aria/docs/: ARCHITECTURE.md  DEV_LOG.md  NOTES.md  PROVIDERS.md  ROADMAP.md
aria/prompts/: __init__.py  decompose_system.txt  github_research.txt  intake_system.txt  judge_system.txt  pattern_extract.txt  synthesize_system.txt  web_research.txt
aria/tools/: __init__.py  cerebras_client.py  code_extractor.py  ddg_search.py  deepseek_client.py  gemini_client.py  github_api.py  groq_client.py  jina_reader.py  logger.py  nvidia_client.py  ollama_client.py  project_scaffolder.py  run_context.py  sambanova_client.py  siliconflow_client.py  zhipu_client.py
docs/screenshots/: README.md
