[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = [
    "E501",  # line-length handled by formatter
    "N818",  # exception name suffix — renaming across 15+ files is out of scope
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["."]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
